# smooth-linuxcnc

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  __init__.py  export_tooltable.py  linuxcnc_api.py  parse_tooltable.py  pyproject.toml  sample_tool.tbl  sync_tooltable.sh  translator.py
smooth_linuxcnc/: __init__.py  config.py
smooth_linuxcnc/examples/sim.axis.smooth/: axis.ini  axis_mm.ini  canterp.ini  connect_pins.hal  histogram_demo.ini  historical_lathe.ini  ini_hal_demo.ini  ldelta.ini  ldelta_demo.ini  panel.xml  postgui_connections.hal  profile_axis.ini  random_tc.ini  rdelta.ini  smooth_handler.py  smooth_panel.ui  toggle_connections.hal
smooth_linuxcnc/examples/sim.axis.smooth/gladevcp/: gladevcp_panel_cmds.hal  gladevcp_panel_tester_cmds.hal  gladevcp_tab_cmds.hal  probe_cmds.hal
smooth_linuxcnc/examples/sim.axis.smooth/hal/: README.md  list_pins.py  smooth_button.hal  smooth_button.py  smooth_panel.xml
smooth_linuxcnc/examples/sim.axis.smooth/qtvcp/: qtvcp_tab_cmds.hal
tests/: test_config.py  test_gui.py  test_smooth_conversion.py  test_translator.py
