[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smooth-linuxcnc"
version = "0.1.0"
description = "LinuxCNC integration for Smooth tool synchronization"
authors = [{name = "sliptonic", email = "sliptonic@example.com"}]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
